# rpi-paperless

./: .gitignore  README.md  paperless-kiosk.service  pyproject.toml  requirements.txt  rpi-paperless.service  setup.sh  start-kiosk.sh  start.py
src/: credentials.py  start.py  ui.py
src/rpi_paperless/: credentials.py  document.py  scanner.py  start.py  ui.py  upload.py  utils.py
