[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi_paperless"
authors = [
    { name="Jonas Dech", email="j.dech@gmx.net" },

]
description = "A lightweight interface for Raspberry Pi to scan paperless documents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
keywords=["paperless-ngx"]
dynamic = ["version", "dependencies"]
license = { text = "LGPL-3.0-only" }

[project.urls]
"Source" = 'https://github.com/Tigul/rpi-paperless'
"Bug Tracker" = 'https://github.com/Tigul/rpi-paperless/issues'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["rpi_paperless*"]

[tool.setuptools.dynamic]
version = {attr = "rpi_paperless.__version__"}
dependencies = {file = "requirements.txt"}

